# matmul

./: .gitignore  CMakeLists.txt  README.md  basic_op.cpp  basic_op.h  main.cpp  malloc2D.cpp  malloc2D.h  matmul.h  matrix_io.cpp  matrix_io.h  matvec_mpi.cpp  matvec_mpi_grid.cpp  matvec_thread.cpp  matvec_thread_grid.cpp  type_index_example.cpp
